gem2deb (0.9.2) UNRELEASED; urgency=medium

  * gem2deb-test-runner: add '.' to $LOAD_PATH with --autopkgtest
  * Gem2Deb::TestRunner: remove innocuous constructor

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 02 Sep 2014 20:10:55 -0300

gem2deb (0.9.1) unstable; urgency=medium

  * gem2deb-test-runner now Breaks/Replaces gem2deb < 0.9. (Closes: #759431)

 -- Cédric Boutillier <boutil@debian.org>  Wed, 27 Aug 2014 14:06:00 +0200

gem2deb (0.9.0) unstable; urgency=medium

  * Provide support for DEP-8 autopkgtest (Closes: #637917)
    + split out a gem2deb-test-runner binary package
    + add a Testsuite: autopkgtest field to template debian/control
    + add templates for debian/tests files to propose a syntax/load test
      (Closes: #645357) and run the test suite of the package
  * Make dh-make-ruby idempotent
  * Refactor test_suite creation in dh_make_ruby
    + in particular, use the rake method by default when a spec/ directory is
      present (Closes: #702578)
  * Remove alternative dependency on ruby-interpreter (Closes: #758806)
  * Verify checksums included in the gems and remove checksums.yaml.gz upon
    conversion of the gems to tarballs (Closes: #725348)

 -- Cédric Boutillier <boutil@debian.org>  Tue, 26 Aug 2014 09:12:32 +0200

gem2deb (0.8.0) unstable; urgency=medium

  [Antonio Terceiro]
  * dh_ruby_fixdepends: inject minimum Ruby dependency provided by
    ruby-all-dev in the shared library dependencies. For that, bump dependency
    on ruby-all-dev to (>= 1:2.1.0.3~)
  * test/test_helper.rb: add test/bin to $PATH during tests
  * test/bin/wnpp-check: mock the actual wnpp-check during tests to avoid
    hitting the network

  [Cédric Boutillier]
  * Update sample gems with non obsolete rake rules

 -- Cédric Boutillier <boutil@debian.org>  Mon, 11 Aug 2014 14:22:55 +0200

gem2deb (0.7.6) unstable; urgency=medium

  [ Antonio Terceiro ]
  * extension builder:
    - display build logs in real time
    - show output of mkmf.log on failure
